@@ -3,6 +3,7 @@ ver 0.17 (2011/??/??)
   - support client-to-client communication
   - "update" and "rescan" need only "CONTROL" permission
   - new command "seekcur" for simpler seeking within current song
+  - add range parameter to command "load"
 * input:
   - cdio_paranoia: new input plugin to play audio CDs
   - curl: enable CURLOPT_NETRC
